# jams-rs

./: .gitignore  .releaserc.json  .releaserc.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  docker-compose.yml  openapi.yml
clients/python/jams/: LICENSE  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  requirements_tf.txt  requirements_tf_arm.txt  ruff.toml
clients/python/jams/examples/: http_example.py  requirements.txt
clients/python/jams/examples/catboost/: main.py
clients/python/jams/examples/lightgbm/: main.py
clients/python/jams/examples/pytorch/: main.py
clients/python/jams/examples/tensorflow/: main.py
clients/python/jams/http/: client.py
clients/python/jams/src/jams/client/: grpc.py  http.py
clients/python/jams/src/jams/common/: type.py
clients/python/jams/src/jams/grpc/: client.py
clients/python/jams/src/jams/http/: client.py
clients/python/jams/src/jams/proto/: jams_pb2.py  jams_pb2.pyi  jams_pb2_grpc.py
clients/python/jams/src/jamspy/client/: grpc.py  http.py
clients/python/jams/src/jamspy/client/models/: common.py  http.py
clients/python/jams/src/jamspy/utils/: __init__.py
clients/python/jams/tests/: helper.py
clients/python/jams/tests/client/grpc/: test_health_check.py  test_models.py  test_predict.py
clients/python/jams/tests/client/http/: test_health_check.py  test_models.py  test_predict.py
clients/python/jams/tests/utils/artefacts/: catboost-my_awesome_regressor_model
clients/python/jams/tests/utils/bundler/: test_catboost.py  test_lightgbm.py  test_pytorch.py  test_tensorflow.py
clients/rust/jams-client/: Cargo.toml  Makefile  README.md
clients/rust/jams-client/examples/catboost/: Cargo.toml
clients/rust/jams-client/examples/catboost/src/: main.rs
clients/rust/jams-client/examples/lightgbm/: Cargo.toml  request.json
clients/rust/jams-client/examples/lightgbm/src/: main.rs
clients/rust/jams-client/examples/pytorch/: Cargo.toml  request.json
clients/rust/jams-client/examples/pytorch/src/: main.rs
clients/rust/jams-client/examples/tensorflow/: Cargo.toml  request.json
clients/rust/jams-client/examples/tensorflow/src/: main.rs
clients/rust/jams-client/src/: common.rs  grpc.rs  http.rs  lib.rs  types.rs
clients/rust/jams-client/tests/client/grpc/: mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/model/: catboost.rs  lightgbm.rs  mod.rs  predictor.rs  tensorflow.rs  test_utils.rs  torch.rs  xgboost.rs
core/tests/model_artefacts/: catboost_multiclass  lgbm_binary.txt  lgbm_reg.txt
core/tests/model_artefacts/autompg_tensorflow/: fingerprint.pb  keras_metadata.pb  saved_model.pb
core/tests/model_artefacts/autompg_tensorflow/variables/: variables.data-00000-of-00001  variables.index
core/tests/model_artefacts/mnist_tensorflow/: fingerprint.pb  keras_metadata.pb  saved_model.pb
core/tests/model_artefacts/mnist_tensorflow/variables/: variables.data-00000-of-00001  variables.index
core/tests/model_artefacts/penguin_tensorflow/: fingerprint.pb
core/tests/model_artefacts/penguin_tensorflow_functional/: keras_metadata.pb  saved_model.pb
internal/jams-proto/: Cargo.toml  build.rs
internal/jams-proto/proto/api/v1/: jams.proto
internal/jams-proto/src/: lib.rs
jams/: Cargo.toml  README.md  build.rs  setup_environment_linux_x86_64.sh
jams-cli/: Cargo.toml  README.md  build.rs
jams-cli/examples/: catboost_titanic_binary_classification_model.py  requirements-macos.txt  tensorflow_penguin_multiclass_classification_model.py  torch_penguin_multiclass_classification_model.py
jams-cli/examples/datasets/: penguins-clean-train.csv
jams-cli/src/: main.rs
jams-core/: Cargo.toml  README.md
jams-core/src/: lib.rs  manager.rs  pool.rs
jams-core/src/model/: catboost.rs  frameworks.rs  input.rs  lightgbm.rs  mod.rs  output.rs  predict.rs  predictor.rs  tensorflow.rs  test_utils.rs  torch.rs  xgboost.rs
jams-core/src/model_store/: azure_blob_storage.rs  common.rs  fetcher.rs  local.rs  mod.rs  s3.rs  storage.rs
jams-core/src/model_store/aws/: common.rs  fetch.rs  mod.rs  s3.rs
jams-core/src/model_store/azure/: blob_storage.rs  common.rs  fetch.rs  mod.rs
jams-core/src/model_store/local/: filesystem.rs
jams-core/tests/model_artefacts/autompg_tensorflow/: fingerprint.pb  keras_metadata.pb
jams-core/tests/model_artefacts/autompg_tensorflow/variables/: variables.data-00000-of-00001
jams-core/tests/model_artefacts/penguin_tensorflow/: saved_model.pb
jams-core/tests/model_storage/local_model_store/tensorflow-large_features_model/variables/: variables.index
jams-core/tests/model_storage/local_model_store/tensorflow-my_awesome_sequential_model/: keras_metadata.pb
jams-core/tests/model_storage/local_model_store/tensorflow-my_awesome_sequential_model/variables/: variables.index
jams-core/tests/model_storage/models/: catboost-my_awesome_binary_model  lightgbm-my_awesome_xen_prob_model.txt
jams-core/tests/model_storage/models/tensorflow-my_awesome_autompg_model/: saved_model.pb
jams-serve/: Cargo.toml  Dockerfile  README.md  build.rs
jams-serve/assets/model_storage/local_model_store/: catboost-titanic_model  pytorch-my_awesome_californiahousing_model.pt  torch-my_awesome_penguin_model.pt
jams-serve/proto/api/v1/: jams.proto
jams-serve/src/: lib.rs  main.rs  router.rs  server.rs  service.rs
jams-serve/src/common/: mod.rs  server.rs  shutdown.rs  state.rs  worker.rs
jams-serve/src/common/instrument/: jaeger.rs  mod.rs  simple.rs
jams-serve/src/common/opentelemetry/: jaeger.rs  mod.rs
jams-serve/src/grpc/: mod.rs  server.rs  service.rs
jams-serve/src/http/: mod.rs  router.rs  server.rs  service.rs
jams-serve/tests/api/: health_check.rs  helper.rs  main.rs  models.rs  predict.rs
jams-serve/tests/api/grpc/: health_check.rs  helper.rs  mod.rs  models.rs  predict.rs
jams-serve/tests/api/http/: health_check.rs  helper.rs  models.rs  predict.rs
jams/examples/: lightgbm_iris_binary_classification_model.py  requirements-linux.txt
jams/examples/datasets/: penguins-clean-test.csv
jams/src/: cli.rs  main.rs
(+63 files in other folders)
