[workspace]

members = [
    "jams",
    "jams-core",
    "jams-serve",
    "internal/jams-proto",
    "clients/rust/jams-client",
    "clients/rust/jams-client/examples/catboost",
    "clients/rust/jams-client/examples/lightgbm",
    "clients/rust/jams-client/examples/pytorch",
    "clients/rust/jams-client/examples/tensorflow"
]
