[package]
name = "core"
version = "0.1.0"
edition = "2021"
exclude = ["./tests"] # excluding since this only has sample models for testing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.21.0"
lgbm = "0.0.2"
tch = "0.15.0"
catboost-rs = {git = "https://github.com/gagansingh894/catboost-rs", branch = "master" }
serde_json = "1"
anyhow = "1"