[package]
name = "jams-cli"
description = "jams-cli is an easy-to-use CLI application for making predictions."
version = "0.1.7"
edition = "2021"
homepage = "https://github.com/gagansingh894/jams-rs"
repository = "https://github.com/gagansingh894/jams-rs/tree/main/jams-cli"
license = "Apache-2.0"
exclude = ["./examples"]
keywords = ["machine-learning", "deep-learning"]

[build]
# Specify rustflags for release build
rustflags = ["-C", "link-arg=-Wl,-rpath,/usr/local/lib"]
build = "build.rs"

[[bin]]
name = "jams-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
jams-core = "0.1"
anyhow = "1.0.86"
