[package]
name = "jams-core"
description = "jams-core provides thin abstraction around common machine learning and deep learning models as well as databases like redis, dynamodb which can be used as real time feature stores. You can think of each component as a LEGO block which can be used to build a system depending on the requirements"
repository = "https://github.com/gagansingh894/jams-rs/tree/main/jams-core"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
keywords = ["machine-learning", "deep-learning"]
exclude = ["./tests"] # excluding since this only has sample models for testing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
catboost = []
lightgbm = []
tensorflow = []
torch = []
xgboost = []
# Default features
default = ["catboost", "lightgbm", "tensorflow", "torch"]

[lib]
name = "jams_core"
crate-type = ["lib"]

[dependencies]
tensorflow = "0.21.0"
lgbm = "0.0.2"
tch = "0.15.0"
catboost-rs = {git = "https://github.com/gagansingh894/catboost-rs", branch = "master", version = "0" }
serde_json = "1"
anyhow = "1"
serde = { version = "1.0.202", features = ["derive"] }
rand = "0.8.5"
ndarray = "0.15.6"
dashmap = "5.5"
