[package]
name = "jams-core"
description = "jams-core provides thin abstraction around common machine learning and deep learning models and model stores like AWS S3, Azure Blob Storage, MinIO, Local Filesystem. You can think of each component as a LEGO block which can be used to build a system depending on the requirements"
homepage = "https://github.com/gagansingh894/jams-rs"
repository = "https://github.com/gagansingh894/jams-rs/tree/main/jams-core"
version = "0.2.23"
edition = "2021"
license = "Apache-2.0"
keywords = ["machine-learning", "deep-learning", "mlops"]
exclude = ["./tests"] # excluding since this only has sample models for testing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
catboost = []
lightgbm = []
tensorflow = []
torch = []
xgboost = []
# Default features
default = ["catboost", "lightgbm", "tensorflow", "torch"]

[lib]
name = "jams_core"
crate-type = ["lib"]

[dependencies]
tensorflow = "0.21.0"
lgbm = "0.0.5"
tch = "0.15.0"
catboost-rs = {git = "https://github.com/gagansingh894/catboost-rs", branch = "master", version = "0" }
serde_json = "1"
anyhow = "1"
serde = { version = "1.0.202", features = ["derive"] }
rand = "0.8.5"
ndarray = "0.15.6"
dashmap = "5.5"
log = "0.4.21"
chrono = "0.4.38"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.36.0"
tokio = { version = "1", features = ["full"] }
tempfile = "3.10.1"
bytes = "1.6.0"
tar = "0.4.41"
flate2 = "1.0.30"
async-trait = "0.1.80"
uuid = { version = "1.8.0", features = ["v4"] }
azure_core = { version = "0.20.0", features = ["tokio-fs"] }
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
futures = "0.3.30"
tracing = "0.1.40"
object-pool = "0.6.0"
lazy_static = "1.5.0"
