[package]
name = "jams-serve"
version = "0.1.9"
edition = "2021"
description = "jams-serve provides a http and gRPC API for jams-core."
homepage = "https://github.com/gagansingh894/jams-rs"
repository = "https://github.com/gagansingh894/jams-rs/tree/main/jams-serve"
license = "Apache-2.0"
exclude = ["./assets"]
keywords = ["machine-learning", "deep-learning"]


[lib]
name = "jams_serve"
crate-type = ["lib"]


[dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
jams-core = "0.1"
anyhow = "1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.5", features = ["trace"] }
log = "0.4.21"
tracing = "0.1.40"
rayon = "1.10"
serde = { version = "1.0.203", features = ["derive"] }
