[package]
name = "jams-serve"
version = "0.1.24"
edition = "2021"
description = "jams-serve provides a http and gRPC API for jams-core."
homepage = "https://github.com/gagansingh894/jams-rs"
repository = "https://github.com/gagansingh894/jams-rs/tree/main/jams-serve"
license = "Apache-2.0"
exclude = ["./assets"]
keywords = ["machine-learning", "deep-learning"]


[lib]
name = "jams_serve"
crate-type = ["lib"]


[dependencies]
jams-core = {path = "../jams-core", version = ">=0.2.4" }
jams-proto = {path = "../internal/jams-proto", version = "0.1"}
axum = "0.7"
anyhow = "1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.5", features = ["trace"] }
log = "0.4.21"
tracing = "0.1.40"
rayon = "1.10"
serde = { version = "1.0.203", features = ["derive"] }
tonic = "0.11"
tonic-reflection = "0.11.0"

[dev-dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1.0.117"