[package]
name = "jams"
description = "jams is an easy-to-use CLI application for interaction with J.A.M.S - Just Another Model Server"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/gagansingh894/jams-rs"
repository = "https://github.com/gagansingh894/jams-rs/tree/main/jams"
license = "Apache-2.0"
exclude = ["./examples"]
keywords = ["machine-learning", "deep-learning"]

[[bin]]
name = "jams"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
jams-core = "0.1"
jams-serve = "0.1"
anyhow = "1.0.86"
tokio = "1.38.0"
log = "0.4.21"
tracing = "0.1.40"
