[package]
name = "jams"
description = "jams is an easy-to-use CLI application for interaction with J.A.M.S - Just Another Model Server"
version = "0.1.13"
edition = "2021"
homepage = "https://github.com/gagansingh894/jams-rs"
repository = "https://github.com/gagansingh894/jams-rs/tree/main/jams"
license = "Apache-2.0"
exclude = ["./examples"]
keywords = ["machine-learning", "deep-learning"]

[[bin]]
name = "jams"
path = "src/main.rs"

[dependencies]
jams-core = {path = "../jams-core", version = "0.2"}
jams-serve = {path = "../jams-serve", version = "0.1"}
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.86"
tokio = "1.38.0"
log = "0.4.21"
tracing = "0.1.40"
